[workspace]
resolver = "2"
members = [
    "crates/mlua-probe-core",
    "crates/mlua-probe-mcp",
]

[workspace.package]
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/mlua-probe"
keywords = ["lua", "debugger", "mlua", "mcp", "breakpoint"]
categories = ["development-tools::debugging"]

[workspace.dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
mlua-lspec = "0.1.0"
mlua-check = "0.1.0"
