[package]
name = "mlua-probe-mcp"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "MCP server (stdio) for mlua-probe — Lua debugger for environments without DAP support"

[[bin]]
name = "mlua-probe-mcp"
path = "src/main.rs"

[dependencies]
mlua-probe-core = { version = "0.1.2", path = "../mlua-probe-core" }
mlua = { workspace = true }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
